@@ -2,7 +2,10 @@ package de.tum.in.www1.artemis.service.learningpath;
 
 import static de.tum.in.www1.artemis.config.Constants.PROFILE_CORE;
 
-import java.util.*;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 import java.util.stream.LongStream;
@@ -276,10 +279,10 @@ public class LearningPathNgxService {
         }
         else {
             // add edge from competency start to first learning object
-            addEdgeFromCompetencyStartToLearningObject(competency, recommendedLearningObjects.get(0), edges);
+            addEdgeFromCompetencyStartToLearningObject(competency, recommendedLearningObjects.getFirst(), edges);
 
             // add edge from last learning object to competency end
-            addEdgeFromLearningObjectToCompetencyEnd(competency, recommendedLearningObjects.get(recommendedLearningObjects.size() - 1), edges);
+            addEdgeFromLearningObjectToCompetencyEnd(competency, recommendedLearningObjects.getLast(), edges);
         }
 
         nodes.addAll(currentCluster);
